--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,10 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/nav_home">
+    app:startDestination="@+id/login_fragment">
 
     <fragment
-        android:id="@+id/nav_home"
+        android:id="@+id/login_fragment"
         android:name="com.example.safeticketsappcompose.ui.Login.LoginFragment"
         android:label="@string/menu_home"
         tools:layout="@layout/fragment_home" />
@@ -25,6 +25,12 @@
     <fragment
         android:id="@+id/registerFragment"
         android:name="com.example.safeticketsappcompose.ui.Register.RegisterFragment"
-        android:label="fragment_register"
+        android:label="Регистрация"
         tools:layout="@layout/fragment_register" />
+    <fragment
+        android:id="@+id/searchFragment2"
+        android:name="com.example.safeticketsappcompose.ui.search.SearchFragment"
+        android:label="Поиск билета"
+        tools:layout="@layout/fragment_search" >
+    </fragment>
 </navigation>
