--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -12,9 +12,9 @@
         tools:layout="@layout/fragment_home" />
 
     <fragment
-        android:id="@+id/nav_gallery"
-        android:name="com.example.safeticketsappcompose.ui.gallery.GalleryFragment"
-        android:label="@string/menu_gallery"
+        android:id="@+id/nav_tickets"
+        android:name="com.example.safeticketsappcompose.ui.tickets.TicketsFragment"
+        android:label="@string/menu_tickets"
         tools:layout="@layout/fragment_gallery" />
 
     <fragment
